<resources>
    <string name="app_name">Picovoice Service</string>
    <string name="wake_word_label">Wake Word:</string>
    <string name="wake_word_name">Porcupine</string>
    <string name="context_label">Context:</string>
    <string name="context_name">Smart Lighting</string>
    <string name="phrase_label">Example Phrase:</string>
    <string name="phrase_text">\"Hey Porcupine, make the living room lights purple.\"</string>
    <string name="button_text">Show Context</string>
</resources>